--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Elijah Raji</title>
   </head>
   <body>
-    <h1> Hello, Code School!.</h1>
+    <h1>Hello, Code School!</h1>
     <ul>
       <li>Ruby on Rails</li>
       <li>javascript</li>
